[tool.poetry]
name = "exchange-rate"
version = "0.1.0"
description = ""
authors = ["lana-sviatash <128919364+lana-sviatash@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.5"
asyncio = "^3.4.3"
websockets = "^11.0.3"
logging = "^0.4.9.6"
names = "^0.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
